--- a/style/fiiw.sty
+++ b/style/fiiw.sty
@@ -71,12 +71,12 @@
 
   % Author names
   \begin{flushright}
-    \textsf{\LARGE\textbf{\@forenameA~\MakeUppercase{\@surnameA}}}\\[1ex]
+    \textsf{\LARGE\textbf{\@forenameA~\@surnameA}}\\[1ex]
     \ifx\@forenameB\@empty\else
-      \textsf{\LARGE\textbf{\@forenameB~\MakeUppercase{\@surnameB}}}
+      \textsf{\LARGE\textbf{\@forenameB~\@surnameB}}
     \fi
 		\ifx\@forenameC\@empty\else
-      \\[1ex]\textsf{\LARGE\textbf{\@forenameC~\MakeUppercase{\@surnameC}}}
+      \\[1ex]\textsf{\LARGE\textbf{\@forenameC~\@surnameC}}
     \fi
   \end{flushright}%
 
