Added some title guidlines

--- a/paper.tex
+++ b/paper.tex
@@ -40,11 +40,16 @@
 \begin{document}
 \titlep
 
-\input{chapters/intro.tex}
+\begin{abstract}
+lorem ipsum this has to be filled with somthing
+\end{abstract}
 
 \input{chapters/software.tex}
 \input{chapters/firmware.tex}
 \input{chapters/hardware.tex}
+
+\pagebreak
+\input{chapters/bibliography.tex}
 
 \pagebreak
 \thispagestyle{empty}
