Moved system overview out firmwar.tex into main

--- a/paper.tex
+++ b/paper.tex
@@ -101,14 +101,19 @@
   \maketitle
 }]
 
+%TODO
 \begin{abstract}
 The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
 \end{abstract}
 
+%TODO
 \keywords{component; formatting; style; styling; insert (key words)}
 
 \section{Introduction}
-% TODO
+% TODO: Write introduction, maby we should merge this with System overview ?
+\section{System Overview}
+% TODO: Make a whole overview of all components
+
 
 \input{chapters/firmware.tex}
 \input{chapters/software.tex}
