--- a/paper.tex
+++ b/paper.tex
@@ -103,7 +103,14 @@
 
 %TODO
 \begin{abstract}
-The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
+The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.\\
+In a race with hydrogen cars its important for the pitwall to communicate with the car driving.
+At the pitwall there need monitoring of the cars condition and speech communication with the driver.
+This crucial for the course of the race.
+This leads to the need for a backup communication system in case the main system fails.
+This paper proposes a low-power, long-range wireless solution capble of transmitting and receiveing both sensor data and voice signals.\\
+(76 words)
+
 \end{abstract}
 
 %TODO
