--- a/paper.tex
+++ b/paper.tex
@@ -104,22 +104,35 @@
 %TODO
 \begin{abstract}
 The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.\\
-In a race with hydrogen cars its important for the pitwall to communicate with the car driving.
-At the pitwall there need monitoring of the cars condition and speech communication with the driver.
-This crucial for the course of the race.
-This leads to the need for a backup communication system in case the main system fails.
-This paper proposes a low-power, long-range wireless solution capble of transmitting and receiveing both sensor data and voice signals.\\
-(76 words)
+Geef een beknopte samenvatting van het uitgevoerde onderzoek. Vermeld de conclusies die zijn getrokken en de mogelijke implicaties daarvan.\\
+geeft probleemstelling,Aanpak,methode,Belangrijkste resultaten,Conclusies en implicaties
 
 \end{abstract}
 
 %TODO
-\keywords{component; formatting; style; styling; insert (key words)}
+\keywords{Wireless, Low power, long-range}
 
 \section{Introduction}
 % TODO: Write introduction, maby we should merge this with System overview ?
+In a race with hydrogen cars, it is important for the pitwall to maintain communication with the car on track.
+At the pitwall, there must be continuous monitoring of the car’s condition and speech communication with the driver.
+This is crucial for the course of the race.
+As a result, a backup communication system is required in case the primary system fails.
+This paper proposes a low-power, long-range wireless solution capable of transmitting and receiving both sensor data and voice signals.
+The required range of the system is determined by the size of the Le Mans circuit in France, which is approximately 2 km in diameter.
+This distance therefore defines the minimum communication range needed. 
+
+
 \section{System Overview}
 % TODO: Make a whole overview of all components
+
+\section{Implementation}
+% TODO: Componenten, software, spraak/data-verwerking
+
+\section{Testing}
+
+\section{Conclusion}
+
 
 
 \input{chapters/firmware.tex}
