--- a/paper.tex
+++ b/paper.tex
@@ -48,6 +48,7 @@
 % ------------------------------------------------------------
 % GRAPHICS
 % ------------------------------------------------------------
+\usepackage{float}
 \usepackage{graphicx}
 
 % ------------------------------------------------------------
@@ -89,7 +90,7 @@
 \begin{document}
 
 \twocolumn[{
-  \date{May - 2025}
+  \date{May--2025}
   \title{Low-energy backup communication system for hydrogen racecar}
   \author{
     \IEEEauthorblockN{Jarno Mechele}
@@ -103,31 +104,28 @@
 
 %TODO
 \begin{abstract}
-The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.\\
+% The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
 Geef een beknopte samenvatting van het uitgevoerde onderzoek. Vermeld de conclusies die zijn getrokken en de mogelijke implicaties daarvan.\\
 geeft probleemstelling,Aanpak,methode,Belangrijkste resultaten,Conclusies en implicaties
 
 \end{abstract}
 
 %TODO
-\keywords{Wireless, Low power, long-range}
+\keywords{Low power, Long-range wireless, Embedded systems}
 
 \section{Introduction}
 % TODO: Write introduction, maby we should merge this with System overview ?
 In a race with hydrogen cars, it is important for the pitwall to maintain communication with the car on track.
-At the pitwall, there must be continuous monitoring of the car’s condition and speech communication with the driver.
+At the pitwall, there must be continuous monitoring of the car's condition and speech communication with the driver.
 This is crucial for the course of the race.
 As a result, a backup communication system is required in case the primary system fails.
 This paper proposes a low-power, long-range wireless solution capable of transmitting and receiving both sensor data and voice signals.
 The required range of the system is determined by the size of the Le Mans circuit in France, which is approximately 2 km in diameter.
 This distance therefore defines the minimum communication range needed. 
 
-
-\section{System Overview}
-% TODO: Make a whole overview of all components
-
-\section{Implementation}
-% TODO: Componenten, software, spraak/data-verwerking
+\input{chapters/firmware}
+\input{chapters/software}
+\input{chapters/hardware}
 
 \section{Testing}
 
@@ -135,10 +133,7 @@ This distance therefore defines the minimum communication range needed.
 
 
 
-\input{chapters/firmware.tex}
-\input{chapters/software.tex}
-\input{chapters/hardware.tex}
 
-\input{chapters/bibliography.tex}
+\input{chapters/bibliography}
 
 \end{document}
