--- a/paper.tex
+++ b/paper.tex
@@ -102,11 +102,10 @@
   \maketitle
 }]
 
-%TODO
+% TODO
 \begin{abstract}
 % The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
-Geef een beknopte samenvatting van het uitgevoerde onderzoek. Vermeld de conclusies die zijn getrokken en de mogelijke implicaties daarvan.\\
-geeft probleemstelling,Aanpak,methode,Belangrijkste resultaten,Conclusies en implicaties
+Summary of the research and conclusion, Problem, method, results, conclusion....
 
 \end{abstract}
 
@@ -114,7 +113,7 @@ geeft probleemstelling,Aanpak,methode,Belangrijkste resultaten,Conclusies en imp
 \keywords{Low power, Long-range wireless, Embedded systems}
 
 \section{Introduction}
-In hydrogen-powerd endurance racing, uninterupted telmetry and communication between the pitwall and the car are essential for both competitive performance and for driver safety. As system could fail due to multiple reasons, and cause a loss of communication costing laps or even endager lives, ad dedicated low-power backup is required. This paper therefor proposes a sub-miliwatt, long-range wireless solution capable of transmitting and receiving both critiacal sensor data and messages to the driver over distances up to 2km (the approximate diameter of the Le Mans circuit). By combining a encrypted LoRa-based RF link with embedded speech synthesis and WAV playback on an ultra-low-power STM32U5 microcontroller, our design ensures that even in the event of primary-system failure, the pit-crew retains awareness of the car's most critical data and issue instruction to the driver.
+In hydrogen-powerd endurance racing, uninterupted telmetry and communication between the pitwall and the car are essential for both competitive performance and for driver safety. As system could fail due to multiple reasons, and cause a loss of communication costing laps or even endager lives, a dedicated low-power backup is required. This paper therefore proposes a sub-miliwatt, long-range wireless solution capable of transmitting and receiving both critiacal sensor data and messages to the driver over distances up to 2km (the approximate diameter of the Le Mans circuit). By combining a encrypted LoRa-based RF link with embedded speech synthesis and WAV playback on an ultra-low-power STM32U5 microcontroller, our design ensures that even in the event of primary-system failure, the pit-crew retains awareness of the car's most critical data and issue instruction to the driver.
 
 \input{chapters/firmware}
 \input{chapters/software}
