Added Acknowledgment section

--- a/paper.tex
+++ b/paper.tex
@@ -125,6 +125,10 @@ WAV file playback was validated by connecting the system's analog output to exte
 
 \section{Conclusion}
 
+\section*{Acknowledgment}
+The authors would like to thank the supervising professors and lab instructors for their guidance throughout the development of this project. Special thanks go to the hydrogen race team for providing valuable context and support related to the vehicle's communication needs. 
+
+Additionally, the authors used generative AI tools to assist with language refinement and grammar correction during the preparation of this manuscript.
 
 
 \input{chapters/bibliography}
