µC afgwerkt lora toegevoegd, begin ADC

--- a/paper.tex
+++ b/paper.tex
@@ -46,6 +46,12 @@
 \usepackage[font=small,labelfont=bf,labelsep=period,justification=centering]{caption}
 
 % ------------------------------------------------------------
+% TEXT
+% ------------------------------------------------------------
+\usepackage[utf8]{inputenc}
+
+
+% ------------------------------------------------------------
 % GRAPHICS
 % ------------------------------------------------------------
 \usepackage{float}
