--- a/paper.tex
+++ b/paper.tex
@@ -99,7 +99,6 @@
 \begin{abstract}
 % The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
 Summary of the research and conclusion, Problem, method, results, conclusion....
-
 \end{abstract}
 
 %TODO
@@ -107,6 +106,9 @@ Summary of the research and conclusion, Problem, method, results, conclusion....
 
 \section{Introduction}
 In hydrogen-powerd endurance racing, uninterupted telmetry and communication between the pitwall and the car are essential for both competitive performance and for driver safety. As systems could fail due to multiple reasons, and cause a loss of communication costing laps or even endager lives, a dedicated low-power backup is required. This paper therefore proposes a long-range wireless solution capable of transmitting and receiving both critiacal sensor data and messages to the driver over distances up to 2km (the approximate diameter of the Le Mans circuit) while only consuming a few milliwatts. By combining a encrypted LoRa-based RF link with embedded speech synthesis and WAV playback on an ultra-low-power STM32U5 microcontroller, our design ensures that even in the event of primary-system failure, the pit-crew retains awareness of the car's most critical data and issue instructions to the driver.
+
+\section{Overall system design}
+
 
 \input{chapters/firmware}
 \input{chapters/software}
@@ -126,10 +128,9 @@ WAV file playback was validated by connecting the system's analog output to exte
 \section{Conclusion}
 
 \section*{Acknowledgment}
-The authors would like to thank the supervising professors and lab instructors for their guidance throughout the development of this project. Special thanks go to the hydrogen race team for providing valuable context and support related to the vehicle's communication needs. 
+The authors would like to thank the supervising professors for their guidance throughout the development of this project. Special thanks go to the Hydro Team KU Leuven for providing valuable context and support related to the vehicle's communication needs. 
 
-Additionally, the authors used generative AI tools to assist with language refinement and grammar correction during the preparation of this manuscript.
-
+Additionally, the authors used generative AI tools to assist with language refinement and grammar correction during the preparation of this paper.
 
 \input{chapters/bibliography}
 
