Added section explaining fragmentation of messages

--- a/paper.tex
+++ b/paper.tex
@@ -49,7 +49,7 @@
 % TEXT
 % ------------------------------------------------------------
 \usepackage[utf8]{inputenc}
-
+\usepackage{enumitem}
 
 % ------------------------------------------------------------
 % GRAPHICS
