Added the software section and abstract

--- a/paper.tex
+++ b/paper.tex
@@ -108,7 +108,14 @@
 % TODO
 \begin{abstract}
 % The abstract is a brief (50--80 words) synopsis of the paper. Use up to 5 keywords.
-Summary of the research and conclusion, Problem, method, results, conclusion....
+%Summary of the research and conclusion, Problem, method, results, conclusion....
+
+This paper presents a low-energy backup communication system for a hydrogen-powered racecar, 
+combining LoRa wireless communication with speech synthesis and WAV playback on an STM32U5 microcontroller. 
+A custom Flutter application with a C++ backend enables the pit team to send and receive messages to the racecar. 
+The system consumes just 382\,mW during transmission and achieved a 440\,m range—suitable for small tracks. 
+It provides a reliable, encrypted, and energy-efficient fallback, with future work aimed at extending communication range.
+
 \end{abstract}
 
 %TODO
