spacing, correct, verduidelijking onafgewerkt deel

--- a/paper.tex
+++ b/paper.tex
@@ -113,7 +113,7 @@
 This paper presents a low-energy backup communication system for a hydrogen-powered racecar, 
 combining LoRa wireless communication with speech synthesis and WAV playback on an STM32U5 microcontroller. 
 A custom Flutter application with a C++ backend enables the pit team to send and receive messages to the racecar. 
-The system consumes just 382\,mW during transmission and achieved a 440\,m range—suitable for small tracks. 
+The system consumes just 382\,mW during transmission and achieved a 440\,m range suitable for small tracks. 
 It provides a reliable, encrypted, and energy-efficient fallback, with future work aimed at extending communication range.
 
 \end{abstract}
@@ -154,6 +154,8 @@ These measurements confirmed the correct operation of the I²S interface.
 \subsection{LoRa on PCB}
 
 range limited to 440m ?
+hoe is dit gemeten?
+in welke omstandigheden?
 
 \subsection{Power measurement}
 
@@ -200,6 +202,7 @@ Therefore, only data provided by the manufacturer can be referenced. These value
 \subsubsection{Audio power consumption}
 
 lorem dat niet werkt
+moet nog gemeten worden
 
 
 \section{Conclusion}
