Added LoRa on PCB testing section

--- a/paper.tex
+++ b/paper.tex
@@ -153,9 +153,9 @@ These measurements confirmed the correct operation of the I²S interface.
 
 \subsection{LoRa on PCB}
 
-range limited to 440m ?
-hoe is dit gemeten?
-in welke omstandigheden?
+The range limit was measured/estimated in an urban environment with the Raspberry Pi positioned at a height of 1 meter, encoutering a gew obstacles along the path. Continuous ping messages where sent at a fixed 1.5-second interval. A mobile phone maintained a SSH connetion to the Pi to monitor incoming responses. While riding a bicycle, the reception of these messages was tracked. When the signal was lost, Google Maps was used to estimate the distance from the Raspberry Pi. 
+
+These test were conducted on a parially cloudy dat at a temperature of 20°C. Consistent message reception was achieved up to a distance of approximatly 440 meters.
 
 \subsection{Power measurement}
 
