added reference for organization

--- a/paper.tex
+++ b/paper.tex
@@ -220,6 +220,8 @@ Moreover, improvements to the speech synthesis quality are recommended to reduce
 
 Despite current limitations, the system demonstrates a reliable, encrypted, and energy-efficient fallback communication solution tailored for hydrogen-powered racecars.
 
+All of the source code, schematics, and documentation are available on GitHub~\cite{Hydro Backup System - Organization}.
+
 \section*{Acknowledgment}
 The authors would like to thank the supervising professors for their guidance throughout the development of this project. Special thanks go to the Hydro Team KU Leuven for providing valuable context and support related to the vehicle's communication needs. 
 
