audio power section klaar

--- a/paper.tex
+++ b/paper.tex
@@ -201,9 +201,9 @@ Therefore, only data provided by the manufacturer can be referenced. These value
 
 \subsubsection{Audio power consumption}
 
-lorem dat niet werkt
-moet nog gemeten worden
-
+The average power consumption was measured for both the audio input and output stages.
+ The audio input, connected to a microphone, consumed an average of 52 mW. 
+For the audio output, the average power consumption while producing an unamplified 1 kHz sine wave signal was measured at 96 mW.
 
 \section{Conclusion}
 
